# PusherDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lezhitech/pusherdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h  util.h
app/src/main/java/com/lezhitech/pusherdemo/: AudioChannel.java  CameraHelper.java  MainActivity.java  VideoChannel.java  WePusher.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/lezhitech/pusherdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
